# label-studio

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
label_studio/: config.py  project.py
